[workspace]
members = [
    "src/test",
    "src/vfs",
    "src/meta", 
    "src/object",
    "src/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/thexiay/juicefs-rs"
keywords = ["filesystem", "cloud-storage", "object-storage"]
license = "Apache-2.0"
repository = "https://github.com/thexiay/juicefs-rs"

[workspace.dependencies]
libc = "0.2"
snafu = "0.8.4"
async-trait = "0.1"
bytes = "1.7"
redis = { version = "0.26", features = ["r2d2", "script"] }
r2d2 = "0.8"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
hostname = "0.3"
get_if_addrs = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
sysinfo = "0.23"
bincode = "1"
regex = "1.10"
juice-utils = { path = "./src/utils" }
bitflags = "1.3"