[workspace]
members = [
    "src/test",
    "src/vfs",
    "src/meta", 
    "src/object",
    "src/utils",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/thexiay/juicefs-rs"
keywords = ["filesystem", "cloud-storage", "object-storage"]
license = "Apache-2.0"
repository = "https://github.com/thexiay/juicefs-rs"

[workspace.dependencies]
libc = "0.2"
snafu = { version = "0.8.4", features = ["backtrace"]}
async-trait = "0.1"
bytes = "1.7"
chrono = "0.4"
redis = { version = "0.27", features = ["script", "aio", "tokio-comp", "connection-manager"] }
deadpool = { version = "0.12", features = ["rt_tokio_1", "managed"] }
deadpool-redis = { version = "0.18", features = ["rt_tokio_1"] }
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["time", "local-time"] }
tokio = { version = "1.40", features = ["full"] }
time = { version = "0.3", features = ["formatting", "local-offset"] }
tokio-util = "0.7"
hostname = "0.3"
get_if_addrs = "0.5"
serde_json = "1"
serde = { version = "1", features = ["derive", "rc"] }
sysinfo = "0.23"
bincode = "1"
regex = "1.10"
juice-utils = { path = "./src/utils" }
bitflags = "1.3"
futures = "0.3"
crc32fast = "1.4"
rand = "0.8"
uuid = "1.11"
dyn-clone = "1"
nix = { version = "0.29", features = ["fs"] }