[package]
name = "juice-meta"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
snafu = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
redis = { workspace = true }