[package]
name = "juice-storage"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
snafu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
opendal = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
governor = { workspace = true }
hashring = { workspace = true }
dashmap = { workspace = true }