cargo-features = ["edition2024"]

[package]
name = "juice-test"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
libc ={ workspace = true }
redis = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
console-subscriber = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }