cargo-features = ["edition2024"]

[package]
name = "juice-vfs"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
juice-meta = { path = "../meta" }
juice-storage = { path = "../storage" }
chrono = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opendal = { workspace = true }
parking_lot = { workspace = true }
either = { workspace = true }