cargo-features = ["edition2024"]

[package]
name = "juice-vfs"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
juice-meta = { path = "../meta" }
juice-storage = { path = "../storage" }
chrono = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
opendal = { workspace = true }
parking_lot = { workspace = true }
either = { workspace = true }
dashmap = { workspace = true }
nix = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
futures-async-stream = { workspace = true }
async-channel = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
assert_matches = { workspace = true }
tracing-test = { workspace = true }
console-subscriber = { workspace = true }